fix: gap

--- a/station-ui/src/components/displays/list-items/token/TokenListItem.module.scss
+++ b/station-ui/src/components/displays/list-items/token/TokenListItem.module.scss
@@ -208,6 +208,7 @@
       flex: 1;
       display: flex;
       justify-content: space-between;
+      gap: 24px;
 
       .chain {
         text-transform: capitalize;
